# Book-Review-Website

./: .dockerignore  Dockerfile  config.py  docker-compose.yml  pyproject.toml
app/: __init__.py  extensions.py
app/admin_panel/: admin_view.py
app/forms/: auth.py  review.py
app/models/: __init__.py  association_tables.py  author.py  book.py  category.py  review.py  user.py
app/routes/auth/: __init__.py  routes.py
app/routes/book/: __init__.py  routes.py
app/routes/home/: __init__.py  routes.py
app/routes/review/: __init__.py  routes.py
app/routes/user/: __init__.py  routes.py
app/templates/: base.html  index.html  search.html  test.html
app/templates/auth/: auth_base.html  login.html  register.html
app/templates/book/: book.html
app/templates/review/: review.html
app/templates/user/: profile.html
migrations/versions/: 5c8c91e8645c_review_changed.py  cc61d748d74d_auto_migration.py
