[tool.poetry]
name = "book-review"
version = "0.1.0"
description = ""
authors = ["Somed-1 <abbasovmaqa159@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-wtf = "^1.2.2"
flask-admin = "^1.6.1"
pymysql = "^1.1.1"
mysql-connector-python = "^9.3.0"
mysqlclient = "^2.2.7"
werkzeug = "^3.1.3"
email-validator = "^2.2.0"
wtforms = "3.1.2"
pillow = "9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
